fixed z-index error

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,9 +1,10 @@
 @use "../../sassItems" as *;
 
 header {
-  // border-bottom: 1px solid red;
+  background-color: $pageColor;
   padding: 0;
-  z-index: 9999;
+  z-index: 99;
+  position: relative;
   .container {
     @include center;
     justify-content: space-between;
@@ -25,7 +26,7 @@ header {
       }
     }
     .userList {
-      z-index: 99;
+      z-index: 999999;
       position: absolute;
       border-radius: 7px;
       width: 200px;
