--- a/src/components/hero/_hero.scss
+++ b/src/components/hero/_hero.scss
@@ -3,7 +3,7 @@
 .heroSection {
   width: 100%;
   padding: 40px 0;
-  background-color: $bageColor;
+  background-color: $pageColor;
 
   .container {
     display: flex;
@@ -11,6 +11,7 @@
     gap: 30px;
 
     .bookCard {
+      z-index: 1!important;
       width: 300px;
       box-shadow: 0 0 10px rgb(209, 209, 209);
       position: relative;
