--- a/src/pages/book/_book.scss
+++ b/src/pages/book/_book.scss
@@ -10,7 +10,7 @@
   .container {
     display: flex;
     justify-content: space-between;
-    background-color: $bageColor;
+    background-color: $pageColor;
     max-width: 900px;
     padding: 0;
     border-radius: 8px;
