--- a/src/pages/logIn/_login.scss
+++ b/src/pages/logIn/_login.scss
@@ -14,7 +14,7 @@
     );
     .loginBox {
       color: $textColor;
-      background-color: $bageColor;
+      background-color: $pageColor;
       width: 450px;
       min-height: fit-content;
       border-radius: 9px;
