--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -9,7 +9,7 @@
       $downColorGradient
     );
     .window {
-      background-color: $bageColor;
+      background-color: $pageColor;
       width: 500px;
       min-height: 500px;
 
