--- a/src/pages/signUp/_signUp.scss
+++ b/src/pages/signUp/_signUp.scss
@@ -16,7 +16,7 @@
     .signUpBox {
       color: $textColor;
 
-      background-color: $bageColor;
+      background-color: $pageColor;
       width: 450px;
       min-height: 600px;
       border-radius: 9px;
